--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<td>Galaxy S22</td>
 				<td>R$ 4.499,00</td>
 				<td>1.500.000</td>
-				<td><a href="http://wa.me/5512991896488?text=Olá, tenho interesse nesse celular" class="button">Fale com o vendedor</a> <a href="http://wa.me/5512991896488?text=Olá, quero comprar esse celular, quais são as formas de pagamento?" class="button">Comprar</a></td>
+				<td><a href="https://almeidatalisson.github.io/samsung/?text=Olá, tenho interesse nesse celular" class="button">Fale com o vendedor</a> <a href="http://wa.me/5512991896488?text=Olá, Gostei do celular Samsung Galaxi S22. Quais são as formas de pagamento?" class="button">Comprar</a></td>
 			</tr>
 			<tr>
 				<td>Apple</td>
